--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,8 +14,8 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://firmware.meizu.com/Firmware/Flyme/note8/8.1.0.0/cn/20200522180505/cf675282/update.zip
-  ROM_NAME: Flyme
+  ROM_URL: https://hugeota.d.miui.com/20.7.30/miui_MI8SE_20.7.30_546ff86058_10.0.zip
+  ROM_NAME: MIUI
   TZ: Asia/Shanghai
 
 jobs:
