--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,8 +14,8 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://hugeota.d.miui.com/20.7.30/miui_MI8SE_20.7.30_546ff86058_10.0.zip
-  ROM_NAME: MIUI
+  ROM_URL: https://ip3783755892.mobgslb.tbcache.com/Firmware/Flyme/note9/8.1.5.0/cn/20200728024015/e7bf9f80/update.zip?ali_redirect_domain=firmware.meizu.com&ali_redirect_ex_ftag=55a638dfcf03034dff788a9b6f68575fde53bbc0b863cc29&ali_redirect_ex_tmining_ts=1598089969&ali_redirect_ex_tmining_expire=3600&ali_redirect_ex_hot=100
+  ROM_NAME: Flyme
   TZ: Asia/Shanghai
 
 jobs:
